Primer commit de branch cabecera

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 
 <link rel="stylesheet" href="css/estilos.css"/>
+<-- ESTA ES LA CABECERA DEL BRANCH CON EL MISMO NOMBRE -->
+
+<head>
+<title> Whatever cabecera </title>
+
+</head>
 <body>
 
 HOLA
