--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <-- ESTA ES LA CABECERA DEL BRANCH CON EL MISMO NOMBRE -->
 
 <head>
-<title> Whatever cabecera </title>
+<title> Whatever conflicto </title>
 
 </head>
 <body>
